@@ -1,3 +1,7 @@
+2000-12-13  Michael Sokolov  <msokolov@ivan.Harhan.ORG>
+
+	* dwarf2dbg.c: #include <limits.h> only if it exists.
+
 2000-12-13  Rodney Brown  <RodneyBrown@mynd.com>
 
 	* config/tc-hppa.c (pa_ip): Correct CHECK_FIELD typo.
